<resources>
    <string name="app_name">Contacts List</string>
    <string name="contact_title">Contacts</string>
    <string name="add_button_text">Add</string>
    <string name="delete_button_text">Delete</string>
    <string name="profile_title">Contact Profile</string>
    <string name="name">Name:</string>
    <string name="number">Phone Number:</string>
    <string name="relationship">Relationship:</string>
    <string name="details_title">Contact Details</string>
    <string name="add_person_button">Add Person</string>
    <string name="profile_picture">Profile Picture</string>
</resources>
