<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/details_title"
        android:textSize="30sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/details_name"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/box_back"
                android:layout_marginTop="2dp"
                android:textSize="25sp"
                android:maxLength="55">
            </EditText>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/number"/>

            <EditText
                android:id="@+id/details_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/box_back"
                android:layout_marginTop="2dp"
                android:textSize="25sp"
                android:maxLength="10">
            </EditText>
        </LinearLayout>

        <ImageView
            android:id="@+id/details_picture"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_account_black_48dp"
            android:contentDescription="@string/profile_picture"
            android:focusable="true" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/relationship"/>

    <ListView
        android:id="@+id/details_relationship"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/add_person_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/add_person_button"
        android:layout_marginBottom="5dp"/>

</LinearLayout>