<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

    <TextView
        android:id="@+id/contact_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/contact_title"
        android:textSize="30sp"/>

    <ListView
        android:id="@+id/the_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"/>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/button_add_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:onClick="newContact"
            android:text="@string/add_button_text"/>

        <Button
            android:id="@+id/button_delete_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp"
            android:text="@string/delete_button_text"/>

    </RelativeLayout>

</LinearLayout>